--- a/package.json
+++ b/package.json
@@ -2,170 +2,10 @@
   "name": "css3-amazing",
   "version": "1.0.0",
   "description": "css3 特效",
-  "main": "index.js",
-  "dependencies": {
-    "_ansi-regex@4.1.0@ansi-regex": "^4.1.0",
-    "_ansi-styles@3.2.1@ansi-styles": "^3.2.1",
-    "_autoprefixer@9.6.1@autoprefixer": "^9.6.1",
-    "_balanced-match@1.0.0@balanced-match": "^1.0.0",
-    "_brace-expansion@1.1.11@brace-expansion": "^1.1.11",
-    "_browserslist@4.6.6@browserslist": "^4.6.6",
-    "_bytes@3.1.0@bytes": "^3.1.0",
-    "_camelcase-css@2.0.1@camelcase-css": "^2.0.1",
-    "_camelcase@5.3.1@camelcase": "^5.3.1",
-    "_caniuse-lite@1.0.30000989@caniuse-lite": "^1.0.30000989",
-    "_chalk@2.4.2@chalk": "^2.4.2",
-    "_cliui@5.0.0@cliui": "^5.0.0",
-    "_color-convert@1.9.3@color-convert": "^1.9.3",
-    "_color-name@1.1.3@color-name": "^1.1.3",
-    "_concat-map@0.0.1@concat-map": "^0.0.1",
-    "_css-unit-converter@1.1.1@css-unit-converter": "^1.1.1",
-    "_cssesc@2.0.0@cssesc": "^2.0.0",
-    "_cssesc@3.0.0@cssesc": "^3.0.0",
-    "_decamelize@1.2.0@decamelize": "^1.2.0",
-    "_electron-to-chromium@1.3.239@electron-to-chromium": "^1.3.239",
-    "_emoji-regex@7.0.3@emoji-regex": "^7.0.3",
-    "_escape-string-regexp@1.0.5@escape-string-regexp": "^1.0.5",
-    "_find-up@3.0.0@find-up": "^3.0.0",
-    "_fs-extra@8.1.0@fs-extra": "^8.1.0",
-    "_fs.realpath@1.0.0@fs.realpath": "^1.0.0",
-    "_get-caller-file@2.0.5@get-caller-file": "^2.0.5",
-    "_glob@7.1.4@glob": "^7.1.4",
-    "_graceful-fs@4.2.2@graceful-fs": "^4.2.2",
-    "_has-flag@3.0.0@has-flag": "^3.0.0",
-    "_indexes-of@1.0.1@indexes-of": "^1.0.1",
-    "_inflight@1.0.6@inflight": "^1.0.6",
-    "_inherits@2.0.4@inherits": "^2.0.4",
-    "_is-fullwidth-code-point@2.0.0@is-fullwidth-code-point": "^2.0.0",
-    "_jsonfile@4.0.0@jsonfile": "^4.0.0",
-    "_locate-path@3.0.0@locate-path": "^3.0.0",
-    "_lodash.toarray@4.4.0@lodash.toarray": "^4.4.0",
-    "_lodash@4.17.15@lodash": "^4.17.15",
-    "_minimatch@3.0.4@minimatch": "^3.0.4",
-    "_node-emoji@1.10.0@node-emoji": "^1.10.0",
-    "_node-releases@1.1.28@node-releases": "^1.1.28",
-    "_normalize-range@0.1.2@normalize-range": "^0.1.2",
-    "_normalize.css@8.0.1@normalize.css": "^8.0.1",
-    "_num2fraction@1.2.2@num2fraction": "^1.2.2",
-    "_object-assign@4.1.1@object-assign": "^4.1.1",
-    "_once@1.4.0@once": "^1.4.0",
-    "_p-limit@2.2.1@p-limit": "^2.2.1",
-    "_p-locate@3.0.0@p-locate": "^3.0.0",
-    "_p-try@2.2.0@p-try": "^2.2.0",
-    "_path-exists@3.0.0@path-exists": "^3.0.0",
-    "_path-is-absolute@1.0.1@path-is-absolute": "^1.0.1",
-    "_postcss-functions@3.0.0@postcss-functions": "^3.0.0",
-    "_postcss-js@2.0.2@postcss-js": "^2.0.2",
-    "_postcss-nested@4.1.2@postcss-nested": "^4.1.2",
-    "_postcss-selector-parser@5.0.0@postcss-selector-parser": "^5.0.0",
-    "_postcss-selector-parser@6.0.2@postcss-selector-parser": "^6.0.2",
-    "_postcss-value-parser@3.3.1@postcss-value-parser": "^3.3.1",
-    "_postcss-value-parser@4.0.2@postcss-value-parser": "^4.0.2",
-    "_postcss@6.0.23@postcss": "^6.0.23",
-    "_postcss@7.0.17@postcss": "^7.0.17",
-    "_pretty-hrtime@1.0.3@pretty-hrtime": "^1.0.3",
-    "_purgecss@1.3.0@purgecss": "^1.3.0",
-    "_reduce-css-calc@2.1.6@reduce-css-calc": "^2.1.6",
-    "_require-directory@2.1.1@require-directory": "^2.1.1",
-    "_require-main-filename@2.0.0@require-main-filename": "^2.0.0",
-    "_semver@5.7.1@semver": "^5.7.1",
-    "_set-blocking@2.0.0@set-blocking": "^2.0.0",
-    "_source-map@0.6.1@source-map": "^0.6.1",
-    "_string-width@3.1.0@string-width": "^3.1.0",
-    "_strip-ansi@5.2.0@strip-ansi": "^5.2.0",
-    "_supports-color@5.5.0@supports-color": "^5.5.0",
-    "_supports-color@6.1.0@supports-color": "^6.1.0",
-    "_tailwindcss@1.1.2@tailwindcss": "^1.1.2",
-    "_uniq@1.0.1@uniq": "^1.0.1",
-    "_universalify@0.1.2@universalify": "^0.1.2",
-    "_which-module@2.0.0@which-module": "^2.0.0",
-    "_wrap-ansi@5.1.0@wrap-ansi": "^5.1.0",
-    "_wrappy@1.0.2@wrappy": "^1.0.2",
-    "_y18n@4.0.0@y18n": "^4.0.0",
-    "_yargs-parser@13.1.1@yargs-parser": "^13.1.1",
-    "_yargs@13.3.0@yargs": "^13.3.0",
-    "ansi-regex": "^4.1.0",
-    "ansi-styles": "^3.2.1",
-    "autoprefixer": "^9.6.1",
-    "balanced-match": "^1.0.0",
-    "brace-expansion": "^1.1.11",
-    "browserslist": "^4.6.6",
-    "bytes": "^3.1.0",
-    "camelcase": "^5.3.1",
-    "camelcase-css": "^2.0.1",
-    "caniuse-lite": "^1.0.30000989",
-    "chalk": "^2.4.2",
-    "cliui": "^5.0.0",
-    "color-convert": "^1.9.3",
-    "color-name": "^1.1.3",
-    "concat-map": "^0.0.1",
-    "css-unit-converter": "^1.1.1",
-    "cssesc": "^3.0.0",
-    "decamelize": "^1.2.0",
-    "electron-to-chromium": "^1.3.239",
-    "emoji-regex": "^7.0.3",
-    "escape-string-regexp": "^1.0.5",
-    "find-up": "^3.0.0",
-    "fs-extra": "^8.1.0",
-    "fs.realpath": "^1.0.0",
-    "get-caller-file": "^2.0.5",
-    "glob": "^7.1.4",
-    "graceful-fs": "^4.2.2",
-    "has-flag": "^3.0.0",
-    "indexes-of": "^1.0.1",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "is-fullwidth-code-point": "^2.0.0",
-    "jsonfile": "^4.0.0",
-    "locate-path": "^3.0.0",
-    "lodash": "^4.17.15",
-    "lodash.toarray": "^4.4.0",
-    "minimatch": "^3.0.4",
-    "node-emoji": "^1.10.0",
-    "node-releases": "^1.1.28",
-    "normalize-range": "^0.1.2",
-    "normalize.css": "^8.0.1",
-    "num2fraction": "^1.2.2",
-    "object-assign": "^4.1.1",
-    "once": "^1.4.0",
-    "p-limit": "^2.2.1",
-    "p-locate": "^3.0.0",
-    "p-try": "^2.2.0",
-    "path-exists": "^3.0.0",
-    "path-is-absolute": "^1.0.1",
-    "postcss": "^7.0.17",
-    "postcss-functions": "^3.0.0",
-    "postcss-js": "^2.0.2",
-    "postcss-nested": "^4.1.2",
-    "postcss-selector-parser": "^6.0.2",
-    "postcss-value-parser": "^4.0.2",
-    "pretty-hrtime": "^1.0.3",
-    "purgecss": "^1.3.0",
-    "reduce-css-calc": "^2.1.6",
-    "require-directory": "^2.1.1",
-    "require-main-filename": "^2.0.0",
-    "semver": "^5.7.1",
-    "set-blocking": "^2.0.0",
-    "source-map": "^0.6.1",
-    "string-width": "^3.1.0",
-    "strip-ansi": "^5.2.0",
-    "supports-color": "^6.1.0",
-    "tailwindcss": "^1.1.2",
-    "uniq": "^1.0.1",
-    "universalify": "^0.1.2",
-    "which-module": "^2.0.0",
-    "wrap-ansi": "^5.1.0",
-    "wrappy": "^1.0.2",
-    "y18n": "^4.0.0",
-    "yargs": "^13.3.0",
-    "yargs-parser": "^13.1.1"
-  },
-  "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^1.2.0",
-    "tailwindcss": "^1.1.2"
-  },
+  "main": "postcss.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "postcss css/tailwind.css -o css/all.css"
   },
   "repository": {
     "type": "git",
@@ -176,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/jzfan/css3-amazing/issues"
   },
-  "homepage": "https://github.com/jzfan/css3-amazing#readme"
+  "homepage": "https://github.com/jzfan/css3-amazing#readme",
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.2.0",
+    "autoprefixer": "^9.6.1",
+    "postcss-cli": "^6.1.3",
+    "tailwindcss": "^1.1.2"
+  }
 }
