--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "css3-amazing",
-  "version": "1.0.0",
-  "description": "css3 特效",
-  "main": "postcss.config.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "postcss css/tailwind.css -o css/all.css"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jzfan/css3-amazing.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jzfan/css3-amazing/issues"
-  },
-  "homepage": "https://github.com/jzfan/css3-amazing#readme",
-  "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^1.2.0",
-    "autoprefixer": "^9.6.1",
-    "postcss-cli": "^6.1.3",
-    "tailwindcss": "^1.1.2"
-  }
+    "name": "css3-amazing",
+    "version": "1.0.0",
+    "description": "css3 特效",
+    "main": "postcss.config.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "NODE_ENV=development postcss css/tailwind.css -o css/all.css",
+        "build": "NODE_ENV=production postcss css/tailwind.css -o css/all.css"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/jzfan/css3-amazing.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/jzfan/css3-amazing/issues"
+    },
+    "homepage": "https://github.com/jzfan/css3-amazing#readme",
+    "devDependencies": {
+        "@fullhuman/postcss-purgecss": "^1.2.0",
+        "autoprefixer": "^9.6.1",
+        "postcss-cli": "^6.1.3",
+        "tailwindcss": "^1.1.2"
+    }
 }
